--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             <a class="social-icon" href="www.youtube.com/@ComunicaBest_ia" target="_blank" rel="noopener">
               <img src="image/icons/youtube.png" alt="YouTube">
             </a>
-            <a class="social-icon" href="https://www.linkedin.com/company/106545562/" target="_blank" rel="noopener">
+            <a class="social-icon" href="https://www.linkedin.com/company/comunicabest/" target="_blank" rel="noopener">
               <img src="image/icons/linkedin.png" alt="LinkedIn">
             </a>
             <a class="social-icon" href="https://www.facebook.com/profile.php?id=61583934265639" target="_blank" rel="noopener">
